--- a/src/data.json5
+++ b/src/data.json5
@@ -43,7 +43,7 @@
                 "links": [
                     {
                         "href": "../_assets/KU_CS_Curriculum.pdf",
-                        "text": "View Cirriculum"
+                        "text": "View Curriculum"
                     }
                 ]
             }
